fix: wrong color

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
   --primary-red: #901c1c;
   --primary-orange: #d3573c;
 
-  --secondary-orange: #d3573c;
+  --secondary-orange: #db8876;
   --secondary-light-grey: #fafafa;
   --secondary-grey: #525252;
   --secondary-red: #901c1c;
